# object-translator-app

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml
app/: main.py
app/stream/: coroutines.py  wrapper.py
grpc_serving/: README.md  cli.py  inference_pb2.py  inference_pb2_grpc.py  management_pb2.py  management_pb2_grpc.py
model/: Dockerfile  README.md  config.properties  download.py  jit_save.py  mobilenet_v3.py
model/grpc_serving/: inference_pb2.py  inference_pb2_grpc.py
model/mobilenet_v3_large/: model.py
model/resnet50/: model.py
stream/: coroutines.py  wrapper.py
